--- a/package.json
+++ b/package.json
@@ -33,8 +33,13 @@
   "devDependencies": {
     "babel-eslint": "10.1.0",
     "eslint": "7.22.0",
+    "eslint-config-airbnb": "^18.2.1",
     "eslint-plugin-ghost": "2.0.0",
-    "eslint-plugin-react": "7.22.0"
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-prettier": "^3.3.1",
+    "eslint-plugin-react": "^7.22.0",
+    "eslint-plugin-react-hooks": "^4.2.0",
+    "prettier": "^2.2.1"
   },
   "dependencies": {
     "@tryghost/helpers": "1.1.40",
@@ -55,6 +60,7 @@
     "gatsby-source-ghost": "4.2.3",
     "gatsby-transformer-sharp": "2.12.0",
     "lodash": "4.17.21",
+    "prop-types": "^15.7.2",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-helmet": "6.1.0"
