--- a/package.json
+++ b/package.json
@@ -34,7 +34,9 @@
     "babel-eslint": "10.1.0",
     "eslint": "7.22.0",
     "eslint-config-airbnb": "^18.2.1",
+    "eslint-config-node": "^4.1.0",
     "eslint-plugin-ghost": "2.0.0",
+    "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-prettier": "^3.3.1",
     "eslint-plugin-react": "^7.22.0",
