--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "@tryghost/helpers": "1.1.40",
     "@tryghost/helpers-gatsby": "1.0.43",
     "cheerio": "1.0.0-rc.5",
+    "dotenv": "^8.2.0",
     "gatsby": "2.32.9",
     "gatsby-awesome-pagination": "0.3.6",
     "gatsby-image": "2.11.0",
